Second homework - EF

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "LinksDbConnection": "Data Source=LinkDB.db"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
